--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -29,7 +29,7 @@
                     <a class="nav-link active" aria-current="page" href="#">INICIO</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../tienda.html">TIENDA</a>
+                    <a class="nav-link" href="/index.html">TIENDA</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">SERVICIOS</a>
@@ -61,7 +61,7 @@
             <h3 class="text-end">Total: $<span id="total-carrito">0</span></h3>
             <button id="vaciar-carrito" class="btn mt-3">Vaciar carrito</button>
             
-            <a href="/tienda.html" class="btn  volver">←  Volver a la tienda <img src="../img/tienda.png"></a>
+            <a href="/index.html" class="btn  volver">←  Volver a la tienda <img src="../img/tienda.png"></a>
         </div>
     </main>
     <nav>
