--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -61,7 +61,7 @@
             <h3 class="text-end">Total: $<span id="total-carrito">0</span></h3>
             <button id="vaciar-carrito" class="btn mt-3">Vaciar carrito</button>
             
-            <a href="/index.html" class="btn  volver">←  Volver a la tienda <img src="../img/tienda.png"></a>
+            <a href="../index.html" class="btn  volver">←  Volver a la tienda <img src="../img/tienda.png"></a>
         </div>
     </main>
     <nav>
