agrega al proyecto registro de usuario y login de simulacro

--- a/index.html
+++ b/index.html
@@ -32,13 +32,10 @@
                     <a class="nav-link" href="#">TIENDA</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">SERVICIOS</a>
+                    <a class="nav-link" href="./pages/registro.html">REGISTRARSE</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">CONTACTO</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">POSTULATE</a>
+                    <a class="nav-link" href="./pages/login.html">INICIAR SESION</a>
                 </li>
                 </ul>
                 </div>
