--- a/pages/login.html
+++ b/pages/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="¿Buscas productos estéticos innovadores y efectivos? ¡Descubre nuestra selección de productos de última generación y mejora tu rutina de belleza!">
-    <title>Carrito de compras | Beauty</title>
+    <title>Iniciar sesión | Beauty</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <link rel="stylesheet" href="../style/style.css">
@@ -43,24 +43,12 @@
         </nav>
     </header>
     <main>
-        <h1>Carrito de compras</h1>
-        <div class="container">
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <th>Producto</th>
-                        <th>Precio</th>
-                    </tr>
-                </thead>
-                <tbody id="tabla-carrito">
-                </tbody>
-            </table>
-            <h3 class="text-end">Total: $<span id="total-carrito">0</span></h3>
-            <button id="vaciar-carrito" class="btn mt-3">Vaciar carrito</button>
-            
-            <a href="../index.html" class="btn  volver">←  Volver a la tienda <img src="../img/tienda.png"></a>
-            <a href="registro.html" class="btn  volver">Iniciar compra <img src="../img/compra.png"></a>
-        </div>
+        <h1>Iniciar sesión</h1>
+            <form id="loginForm">
+                <input type="text" id="usuarioLogin" placeholder="Usuario" required /><br>
+                <input type="password" id="passwordLogin" placeholder="Contraseña" required /><br>
+                <button type="submit" class="btn volver">Ingresar</button>
+            </form>
     </main>
     <nav>
         <a href="https://whatsapp.com" target="_blank"> <img src="../img/whatsapp.png" class="logo-whatsapp" alt="logo de whatsapp"></a>
