agregado de boton que redirige a la pagina de carrito

--- a/pages/login.html
+++ b/pages/login.html
@@ -44,6 +44,10 @@
     </header>
     <main>
         <h1>Iniciar sesión</h1>
+        <div id="carrito-info">
+            <a href="../pages/carrito.html"><button class="btn mt-3"><img src="../img/carrito.png"></button></a>
+            <p><span id="cantidad">0</span></p>
+        </div>
             <form id="loginForm">
                 <input type="text" id="usuarioLogin" placeholder="Usuario" required /><br>
                 <input type="password" id="passwordLogin" placeholder="Contraseña" required /><br>
