--- a/pages/registro.html
+++ b/pages/registro.html
@@ -44,6 +44,10 @@
     </header>
     <main>
         <h1>Registro de usuario</h1>
+        <div id="carrito-info">
+            <a href="../pages/carrito.html"><button class="btn mt-3"><img src="../img/carrito.png"></button></a>
+            <p><span id="cantidad">0</span></p>
+        </div>
         <form id="registroForm">
             <input type="text" id="usuario" placeholder="Usuario" required /><br>
             <input type="email" id="email" placeholder="Email" required /><br>
