--- a/pages/finalizar-compra.html
+++ b/pages/finalizar-compra.html
@@ -4,33 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="¿Buscas productos estéticos innovadores y efectivos? ¡Descubre nuestra selección de productos de última generación y mejora tu rutina de belleza!">
-    <title>Carrito de compras | Beauty</title>
+    <title>Finalizar compra | Beauty</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
     </style>
     <script defer src="../tienda.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <script defer type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 </head>
 <body>
     <header>
         <img src="../img/BEAUTY.png" alt="logo de página de centro de estética llamado Beauty">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"></a>
+                <a class="navbar-brand" href="../index.html"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">INICIO</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./login.html">MI CUENTA</a>
+                            <a class="nav-link" href="../index.html">INICIO</a>
                         </li>
                     </ul>
                 </div>
@@ -38,24 +36,33 @@
         </nav>
     </header>
     <main>
-        <h1>Carrito de compras</h1>
-        <div class="container">
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <th>Producto</th>
-                        <th>Precio</th>
-                    </tr>
-                </thead>
-                <tbody id="tabla-carrito">
-                </tbody>
+        <h1>Finalizar Compra</h1>
+
+        <section id="resumen-carrito">
+            <h2>Resumen del Carrito</h2>
+            <table id="tabla-carrito">
             </table>
-            <h3 class="text-end">Total: $<span id="total-carrito">0</span></h3>
-            <button id="vaciar-carrito" class="btn mt-3">Vaciar carrito <img src="../img/papelera.png"></button>
-            
-            <a href="../index.html" class="btn  volver">←  Volver a la tienda <img src="../img/tienda.png"></a>
-            <a href="login.html" class="btn  volver">Iniciar compra <img src="../img/compra.png"></a>
-        </div>
+            <p><strong>Total:</strong> $<span id="total-carrito">0</span></p>
+        </section>
+
+        <section id="formulario-pago">
+            <h2>Datos de la Tarjeta</h2>
+            <form id="formularioCompra">
+                <label for="nombre">Nombre del titular</label><br>
+                <input type="text" id="nombre" required><br><br>
+
+                <label for="numero">Número de tarjeta</label><br>
+                <input type="text" id="numero" maxlength="16" pattern="\d{16}" placeholder="1234 5678 9012 3456" required><br><br>
+
+                <label for="vencimiento">Fecha de vencimiento</label><br>
+                <input type="month" id="vencimiento" required><br><br>
+
+                <label for="cvv">CVV</label><br>
+                <input type="text" id="cvv" maxlength="4" pattern="\d{3,4}" required><br><br>
+
+                <button type="submit">Pagar</button>
+            </form>
+        </section>
     </main>
     <nav>
         <a href="https://whatsapp.com" target="_blank"> <img src="../img/whatsapp.png" class="logo-whatsapp" alt="logo de whatsapp"></a>
