--- a/pages/login.html
+++ b/pages/login.html
@@ -8,11 +8,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
     </style>
     <script defer src="../tienda.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 </head>
 <body>
     <header>
@@ -24,20 +26,10 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">INICIO</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/index.html">TIENDA</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./registro.html">REGISTRARSE</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./login.html">INICIAR SESION</a>
-                </li>
-                </ul>
+                    <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/index.html">INICIO</a>
+                    </li>
                 </div>
             </div>
         </nav>
@@ -48,11 +40,15 @@
             <a href="../pages/carrito.html"><button class="btn mt-3"><img src="../img/carrito.png"></button></a>
             <p><span id="cantidad">0</span></p>
         </div>
+        <div>
             <form id="loginForm">
                 <input type="text" id="usuarioLogin" placeholder="Usuario" required /><br>
                 <input type="password" id="passwordLogin" placeholder="Contraseña" required /><br>
                 <button type="submit" class="btn volver">Ingresar</button>
             </form>
+        </div>
+        <p>Si todavía no te registraste:</p>
+        <a href="registro.html"><button class="btn volver">Crear cuenta nueva</button></a>
     </main>
     <nav>
         <a href="https://whatsapp.com" target="_blank"> <img src="../img/whatsapp.png" class="logo-whatsapp" alt="logo de whatsapp"></a>
