--- a/tienda.html
+++ b/tienda.html
@@ -48,49 +48,49 @@
                 <img src="./img/producto1.jpg" alt="foto de dos frascos de serum facial de vitamiva C y una crema facial de vitamina C al lado">
                 <p>Combo Vitamina C</p>
                 <p>$12.560,00</p>
-                <a href="#"><button class="comprar">Agregar al carrito</button></a>
+                <a><button class="comprar">Agregar al carrito</button></a>
             </div>
             <div class="producto">
                 <img src="./img/producto2.jpg" alt="foto de serum de vitamina C con dos mitades de una naranja a su lado">
                 <p>Serum Vitamina C</p>
                 <p>$3.600,00</p>
-                <a href="#"><button class="comprar">Agregar al carrito</button></a>
+                <a><button class="comprar">Agregar al carrito</button></a>
             </div>
             <div class="producto">
                 <img src="./img/producto3.jpg" alt="foto de crema corporal y facias de rosas">
                 <p>Combo Rosas Alpinas</p>
                 <p>$8.960,00</p>
-                <a href="#"><button class="comprar">Agregar al carrito</button></a>
+                <a><button class="comprar">Agregar al carrito</button></a>
             </div>
             <div class="producto">
                 <img src="./img/producto4.jpg" alt="foto de gel de limpieza facial color verde en un fondo blanco">
                 <p>Gel de limpieza purificante</p>
                 <p>$4.790,00</p>
-                <a href="#"><button class="comprar">Agregar al carrito</button></a>
+                <a><button class="comprar">Agregar al carrito</button></a>
             </div>
             <div class="producto">
                 <img src="./img/producto5.jpg" alt="foto de leche limpiadora facial en in fondo blanco">
                 <p>Leche limpiadora facial</p>
                 <p>$4.790,00</p>
-                <a href="#"><button class="comprar">Agregar al carrito</button></a>
+                <a><button class="comprar">Agregar al carrito</button></a>
             </div>
             <div class="producto">
                 <img src="./img/producto6.jpg" alt="foto de espuma facial limpiadora para pieles acnéicas en un fondo blanco">
                 <p>Espuma de limpieza astringente</p>
                 <p>$5.640,00</p>
-                <a href="#"><button class="comprar">Agregar al carrito</button></a>
+                <a><button class="comprar">Agregar al carrito</button></a>
             </div>
             <div class="producto">
                 <img src="./img/producto7.jpg" alt="foto de pote de exfoliante facial de rosas en un fondo blanco">
                 <p>Exfoliante facial Rosas</p>
                 <p>$3.290,00</p>
-                <a href="#"><button class="comprar">Agregar al carrito</button></a>
+                <a><button class="comprar">Agregar al carrito</button></a>
             </div>
             <div class="producto">
                 <img src="./img/producto8.jpg" alt="foto de pote de crema facial con vitamina c y retinol para el envejecimiento">
                 <p>Crema facial con Retinol y Vitamina C</p>
                 <p>$12.900,00</p>
-                <a href="#"><button class="comprar">Agregar al carrito</button></a>
+                <a><button class="comprar">Agregar al carrito</button></a>
             </div>
         </section>
     </main>
