cambios de productos

--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -53,7 +53,7 @@
             <h3 class="text-end">Total: $<span id="total-carrito">0</span></h3>
             <button id="vaciar-carrito" class="btn mt-3">Vaciar carrito <img src="../img/papelera.png"></button>
             
-            <a href="../index.html" class="btn  volver">←  Volver a la tienda <img src="../img/tienda.png"></a>
+            <a href="../tienda.html" class="btn  volver">←  Volver a la tienda <img src="../img/tienda.png"></a>
             <a href="login.html" class="btn  volver">Iniciar compra <img src="../img/compra.png"></a>
         </div>
     </main>
