Agregado de MockAPI y vaciado de carrito al terminar de pagar la compra

--- a/tienda.html
+++ b/tienda.html
@@ -43,7 +43,7 @@
             <p><span id="cantidad">0</span></p>
         </div>
         
-        <section class="tienda">
+        <!-- <section class="tienda">
             <div class="producto">
                 <img src="./img/producto1.jpg" alt="foto de dos frascos de serum facial de vitamiva C y una crema facial de vitamina C al lado">
                 <p>Combo Vitamina C</p>
@@ -92,6 +92,9 @@
                 <p>$12.900,00</p>
                 <a><button class="comprar">Agregar al carrito</button></a>
             </div>
+        </section> -->
+        <section class="tienda" id="contenedor-productos">
+        <!-- Aquí se insertarán los productos desde la API -->
         </section>
     </main>
     <nav>
